# tinyopt

./: .clang-format  .clangd  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CMakeLists.txt  LICENSE  README.md  README.txt  docker-compose.yml  pixi-configure.sh  pixi.toml
.github/workflows/: build.yml  github-actions-build.yml
benchmarks/: CMakeLists.txt  ceres.cpp  dense.cpp  dense_double.cpp  dense_float.cpp  densef.cpp  options.h  sparse.cpp  utils.h
benchmarks/scripts/: analysis.py  results.ipynb  run.sh
cmake/: Benchmarking.cmake  Bindings.cmake  CompilerFlags.cmake  Configuration.cmake  Documentation.cmake  FindLiePlusPlus.cmake  FindSophus.cmake  FindSphinx.cmake  FindTinyopt.cmake  Install.cmake  Options.cmake  Packaging.cmake  Testing.cmake  ThirdParties.cmake  TinyoptConfig.cmake.in  TinyoptTargets.cmake  Version.cmake
docker/ubuntu-dev/: Dockerfile  build.sh
docs/: API.md  Doxyfile.in  requirements.txt
docs/sphinx/: conf.py  index.rst
include/tinyopt/: cost.h  distances.h  formatters.h  gn.h  jet.h  lm.h  log.h  loss.h  math.h  norms.h  num_diff.h  opt_jet.h  optimize.h  optimize_jet.h  optimizer.h  options.h  output.h  params.h  stop_reasons.h  time.h  tinyopt.h  traits.h  types.h
include/tinyopt/diff/: auto_diff.h  gradient_check.h  jet.h  jet_traits.h  num_diff.h  opt_jet.h  optimize_autodiff.h
include/tinyopt/losses/: activations.h  classif.h  helpers.h  losses.h  mahalanobis.h  norms.h  robust_norms.h
include/tinyopt/optimizers/: gd.h  gn.h  lm.h  nlls.h  optimizer.h  optimizers.h  options.h  unconstrained.h
include/tinyopt/solvers/: base.h  gd.h  gn.h  lm.h  options.h  solvers.h
tests/: CMakeLists.txt  activations.cpp  basic.cpp  ceres.cpp  check_gradient.cpp  circle.cpp  classif.cpp  cov.cpp  diff.cpp  distances.cpp  lieplusplus.cpp  linear_solvers.cpp  loss.cpp  mahalanobis.cpp  nn.cpp  norms.cpp  optimize_easy.cpp  optimize_hard.cpp  optimizer.cpp  optimizers.cpp  params.cpp  robust_norms.cpp  simple.cpp  solvers.cpp  sophus.cpp  sparse.cpp  sqrt2.cpp  traits.cpp  types.cpp  unconstrained.cpp  userdef_params.cpp  userdef_params_jet.cpp
